# pytestcachecleaner

./: .gitignore  README.md  pyproject.toml
ptcc/: __init__.py  cleaner.py  cli.py
tests/: test_cleaner.py  test_cli.py
