[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ptcc"
version = "0.1.0"
description = "Utility to erase all .pytest_cache folders recursively"
authors = [
  { name="Simon R. Lincoln" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

[project.scripts]
ptcc = "ptcc.cli:main"
